--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ion2-calendar",
-  "version": "2.2.0",
-  "description": "A date picker component for ionic2 ",
+  "version": "2.3.0",
+  "description": "A date picker component for Ionic 3 ",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "scripts": {
@@ -21,27 +21,27 @@
     "url": "https://github.com/HsuanXyz/ion2-calendar.git"
   },
   "devDependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "4.4.6",
-    "@angular/forms": "4.4.6",
-    "@angular/http": "4.4.6",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
+    "@angular/compiler-cli": "5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/http": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
     "gulp": "^3.9.1",
     "gulp-bump": "^3.0.0",
-    "ionic-angular": "3.7.1",
+    "ionic-angular": "^3.9.9",
     "ionicons": "~3.0.0",
-    "moment": "^2.19.1",
+    "moment": "^2.23.0",
     "ng-packagr": "^2.0.0",
     "npm-run-all": "^4.1.2",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.11",
     "tsickle": "^0.27.2",
     "tslint": "~5.7.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.5.3",
-    "zone.js": "0.8.18"
+    "typescript": "^3.7.2",
+    "zone.js": "0.8.26"
   },
   "keywords": [
     "ionic2",
