--- a/demo-lazyload/ionic.config.json
+++ b/demo-lazyload/ionic.config.json
@@ -1,6 +1,5 @@
 {
   "name": "lazyload-demo",
-  "app_id": "",
-  "type": "ionic-angular",
-  "integrations": {}
+  "integrations": {},
+  "type": "ionic-angular"
 }
