--- a/demo/package.json
+++ b/demo/package.json
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.4",
-    "typescript": "^2.6.2",
+    "typescript": "~2.6.2",
     "i": "0.3.6",
     "npm": "5.7.1",
     "ws": "3.3.2"
