--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "tsickle": "^0.27.2",
     "tslint": "~5.7.0",
     "tslint-eslint-rules": "^4.1.1",
-    "typescript": "^2.6.2",
+    "typescript": "~2.6.2",
     "zone.js": "0.8.26"
   },
   "keywords": [
